# lead_script

./: .flake8  .gitignore  pyproject.toml  readme.md  setup.sh  start.py  whitelist.txt
src/: config.py
src/domain/lead/dto/: lead.py
src/script/: main.py  time.json
src/script/services/: facebook.py  keycrm.py
systemd/: lead_transfer.service  lead_transfer.timer
tests/: test_facebook.py  test_keycrm.py
